@@ -311,7 +311,8 @@ var propPaths = {
     "multipart": "multipart",
     "querystring": "querystring",
     "redirect": "redirect",
-    "utils": "utils"
+    "utils": "utils",
+    "view": "view"
 };
 
 for (var propertyName in propPaths) {
