@@ -8,6 +8,7 @@ exports.httpPropertyName = httpPropertyName;
 exports.reverseHttpPropertyName = reversePropertyName;
 exports.strftime = strftime;
 exports.byteSizeFormat = byteSizeFormat;
+exports.escapeHtml = escapeHtml;
 exports.escapeRe = escapeRe;
 exports.isRe = isRe;
 exports.isEmptyObject = isEmptyObject;
@@ -208,11 +209,21 @@ function byteSizeFormat(size) {
 }
 
 /**
- * Escapes all special regular expression characters in `str` with a
- * forward slash.
+ * Escapes all special HTML characters in the given `string`.
  */
-function escapeRe(str) {
-    return str.replace(/([.?*+^$[\]\\(){}-])/g, "\\$1");
+function escapeHtml(string) {
+  return String(string)
+    .replace(/&(?!\w+;)/g, "&amp;")
+    .replace(/</g, "&lt;")
+    .replace(/>/g, "&gt;")
+    .replace(/"/g, "&quot;");
+}
+
+/**
+ * Escapes all special regular expression characters in the given `string`.
+ */
+function escapeRe(string) {
+    return String(string).replace(/([.?*+^$[\]\\(){}-])/g, "\\$1");
 }
 
 /**
